<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/quick_add_menu_button"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_food"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sign_out"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/sign_out"/>

    <item
        android:id="@+id/add_random_foods"
        android:icon="@drawable/ic_notebook_svgrepo_com"
        android:title="@string/add_random_foods"/>

    <item
        android:id="@+id/me"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/me"/>

</menu>