<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity"
    android:background="#eff1f7"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/Calories" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="1075.5/2000 kcal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="88%"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/protein_pb"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:radius="5dp"
        android:progressTint="@color/gray"
        android:layout_marginBottom="10dp"
        style="@android:style/Widget.ProgressBar.Horizontal"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/Protein" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="36.5/50 g" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="88%"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/calories_pb"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:radius="5dp"
        android:progressTint="@color/green"
        android:layout_marginBottom="10dp"
        style="@android:style/Widget.ProgressBar.Horizontal"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/carbs" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="128/200 g"
            android:textAlignment="textStart" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="88%"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/carbs_pb"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:radius="5dp"
        android:progressTint="@color/blue"
        android:layout_marginBottom="10dp"
        style="@android:style/Widget.ProgressBar.Horizontal"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/Fat" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="21/35 g" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="88%"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/fat_pb"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:radius="5dp"
        android:progressTint="@color/red"
        android:layout_marginBottom="10dp"
        style="@android:style/Widget.ProgressBar.Horizontal"
        />


</LinearLayout>